[gd_scene load_steps=6 format=3 uid="uid://cuqwiwbmexb2b"]

[ext_resource type="Script" uid="uid://cskd1pbx25sbl" path="res://scripts/main.gd" id="1_elqb8"]
[ext_resource type="PackedScene" uid="uid://bg0fpe7icftou" path="res://scenes/house.tscn" id="2_rarhs"]
[ext_resource type="PackedScene" uid="uid://cskwht2ywc8fl" path="res://scenes/barn.tscn" id="3_vcsgt"]
[ext_resource type="PackedScene" uid="uid://chi8mgnkjlrte" path="res://scenes/mill.tscn" id="4_c01mt"]
[ext_resource type="Script" uid="uid://cwih4o76gqssw" path="res://scripts/grid.gd" id="5_vcsgt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_elqb8")
house_scene = ExtResource("2_rarhs")
barn_scene = ExtResource("3_vcsgt")
mill_scene = ExtResource("4_c01mt")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("5_vcsgt")

[node name="Buildings" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HouseButton" type="Button" parent="CanvasLayer"]
offset_left = 4.0
offset_right = 42.0
offset_bottom = 15.0

[node name="BarnButton" type="Button" parent="CanvasLayer"]
offset_left = 86.0
offset_top = 1.0
offset_right = 128.0
offset_bottom = 16.0

[node name="MillButton" type="Button" parent="CanvasLayer"]
offset_left = 45.0
offset_right = 85.0
offset_bottom = 16.0

[node name="PlaceDialog" type="ConfirmationDialog" parent="CanvasLayer"]
